--- a/Exploratory Data Analysis.Rmd
+++ b/Exploratory Data Analysis.Rmd
@@ -17,6 +17,7 @@ library(ggfortify)
 library(rjson)
 library(nasapower)
 library(ggsci) # Scientific color palletes
+library(zoo) # Replace NAs in time series analysis
 ```
 
 
@@ -432,6 +433,7 @@ na.omit(df) %>% ggplot(aes(x = bioma, y = log(frp))) +
 ```
 
 ```{r}
+# link for reference https://jfly.uni-koeln.de/color/
 # The palette with grey:
 cbp1 <- c("#D55E00", "#E69F00", "#56B4E9", "#009E73",
           "#F0E442", "#0072B2", "#999999", "#CC79A7")
@@ -486,6 +488,44 @@ df %>%
     facet_wrap(~ano) +
     geom_path(color = 'white', size = 0.1)
 ```
+
+What about cumulative sums?
+
+```{r}
+accum <- df %>%
+  mutate(data = date(datahora),
+         ano = year(datahora)) %>% 
+  select(ano, data) %>% 
+  group_by(ano, data) %>% 
+  summarise(occurrence = n()) %>% 
+  mutate(cum_sum = cumsum(occurrence),
+         dia_ano = yday(data))
+
+accum %>% ggplot(aes(x = data, y = cum_sum)) +
+  geom_line() +
+  scale_x_date(date_breaks = "4 months", date_labels = "%b/%y")
+```
+
+```{r}
+splitted <- accum %>% select(ano, dia_ano, cum_sum)
+
+# Using `do` function to replace NAs values with the last records value
+tidy <- splitted %>% spread(key = ano, value = cum_sum) %>% do(zoo::na.locf(.))
+tidy$`2019`[273:nrow(tidy)] <- NA
+  
+```
+
+```{r}
+tidy %>% ggplot(aes(x = dia_ano)) +
+  geom_line(aes(y = `2015`, col = "#bfac8e")) +
+  geom_line(aes(y = `2016`, col = "#d5f56c")) +
+  geom_line(aes(y = `2017`, col = "#c95b5b")) +
+  geom_line(aes(y = `2018`, col = "#b85dd4")) +
+  geom_line(aes(y = `2019`), col = "#917783") +
+  scale_x_continuous("Day of the year", breaks = seq(from = 1, to = 366, by = 50)) +
+  scale_y_continuous("Number of fires")
+```
+
 
 
 From NasaPower API we can obtain useful data for about 146 weather and climate parameters, such as:
